--- a/modules/users/client/views/authentication/authentication.client.view.html
+++ b/modules/users/client/views/authentication/authentication.client.view.html
@@ -1,5 +1,5 @@
-<div class="wrapper wrapper-content" ng-controller="AuthenticationController">
-    <div class="ibox">
+<div class="row" ng-controller="AuthenticationController">
+    <!--<div class="ibox">
       <div class="ibox-content">
           <h3 class="text-center">Sign in using your social accounts</h3>
           <div class="text-center">
@@ -16,5 +16,6 @@
     <div class="col-lg-12">
       <div ui-view></div>
     </div>
-  </div>
+  </div>-->
+  <div ui-view></div>
 </div>
