Update Main Page

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -19,6 +19,10 @@
         </ul>
         <ul class="nav navbar-top-links navbar-nav navbar-right" ng-show="authentication.user">
             <li uib-dropdown="">
+              <a uib-dropdown-toggle="" class="count-info">
+                 <i class="fa fa-shopping-cart"></i><span class="label label-primary">0</span></a>
+            </li>
+            <li uib-dropdown="">
                 <a uib-dropdown-toggle="" class="user-header-dropdown-toggle" role="button">
                     <img ng-src="{{authentication.user.profileImageURL}}" alt="{{authentication.user.displayName}}" class="header-profile-image" />
                     <span ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
@@ -33,9 +37,9 @@
                     <li ui-sref-active="active" ng-show="authentication.user.provider === 'local'">
                         <a ui-sref="settings.password">Change Password</a>
                     </li>
-                    <li ui-sref-active="active">
+                    <!--<li ui-sref-active="active">
                         <a ui-sref="settings.accounts">Manage Social Accounts</a>
-                    </li>
+                    </li>-->
                     <li class="divider"></li>
                     <li>
                         <a href="/api/auth/signout" target="_self">Signout</a>
