--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -2,10 +2,10 @@
     <div class="middle-box text-center loginscreen  animated fadeInDown">
         <div>
             <div>
-                <h2 class="logo-name">BS:)</h2>
+                <h2 class="logo-name">Bs:)</h2>
             </div>
-            <h3>Welcome to BS:)</h3>
-            <p>Book Store Application develop with Javascript Fullstack Technology. Do you know what I MEAN?
+            <h3>Welcome to <i class="fa fa-book"></i><b> Bookstore:)</b></h3>
+            <p>This application is developed with Javascript Fullstack Technology. Do you know what I MEAN?
             </p>
             <p>Login in. To see it in action.</p>
             <form name="userForm" ng-submit="signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
