--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -1,8 +1,8 @@
 <div class="footer">
   <div class="pull-right">
-    Example text
+    created by Arif
   </div>
   <div>
-    <strong>Copyright</strong> Example Company &copy; 2015-2016
+    <strong>Copyright</strong> Mitrais CDC &copy; 2016
   </div>
 </div>
