--- a/modules/core/client/views/navigation.client.view.html
+++ b/modules/core/client/views/navigation.client.view.html
@@ -8,22 +8,50 @@
           <a href>
             <span class="clear">
                 <span class="block m-t-xs">
-                    <h2><strong class="font-bold">Bookstore :)</strong></h2>
+                    <h2><i class="fa fa-book"></i><strong class="font-bold"> Bookstore:)</strong></h2>
              </span>
                 <span class="text-muted text-xs block">MEAN Stack <i>Online Shop</i></span>
             </span>
           </a>
         </div>
         <div class="logo-element">
-          BS:)
+          Bs:)
         </div>
       </li>
       <li ng-class="{active: $uiRoute}" ui-route="/" >
         <a href="/#!/"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
       </li>
-	  <li ng-class="{active: $uiRoute}" ui-route="/chat" >
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Business</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-child"></i> <span class="nav-label">Children's</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-book"></i> <span class="nav-label">Fiction</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-bank"></i> <span class="nav-label">History</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-pagelines"></i> <span class="nav-label">Hobbies</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-flask"></i> <span class="nav-label">Science</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-group"></i> <span class="nav-label">Social Science</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-futbol-o"></i> <span class="nav-label">Sports</span></a>
+      </li>
+      <li ng-class="{active: $uiRoute}" ui-route="" >
+        <a href="#"><i class="fa fa-bus"></i> <span class="nav-label">Travel</span></a>
+      </li>
+	    <li ng-class="{active: $uiRoute}" ui-route="/chat" >
         <a href="/chat"><i class="fa fa-comments"></i> <span class="nav-label">Chat</span></a>
       </li>
+
       <!--<li ng-repeat="item in menu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
         <a ng-switch-when="dropdown" class="dropdown-toggle" dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
         <ul ng-switch-when="dropdown" class="dropdown-menu nav nav-second-level">
