--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -3,12 +3,10 @@
         <div>
             <div>
 
-                <h1 class="logo-name">BS:)</h1>
+                <h1 class="logo-name">Bs:)</h1>
 
             </div>
-            <h3>Register to BS:)</h3>
-            <p>Create account to see it in action.</p>
-
+            <h3>Register to <i class="fa fa-book"></i><b> Bookstore:)</b></h3>
             <form name="userForm" ng-submit="signup(userForm.$valid)" class="signin" novalidate autocomplete="off">
                 <fieldset>
                     <div class="form-group" show-errors>
@@ -52,10 +50,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group" ng-show="!userForm.password.$error.required">
+                    <!--<div class="form-group" ng-show="!userForm.password.$error.required">
                         <label>Password Requirements</label>
                         <progressbar value="requirementsProgress" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></progressbar>
-                    </div>
+                    </div>-->
                     <div class="text-center form-group">
                         <button type="submit" class="btn btn-primary">Register</button>
                         &nbsp; or&nbsp;
