--- a/modules/users/client/views/password/forgot-password.client.view.html
+++ b/modules/users/client/views/password/forgot-password.client.view.html
@@ -1,12 +1,10 @@
-<div class="wrapper wrapper-content" ng-controller="PasswordController">
-<div class="ibox" >
-  <div class="ibox-content">
+<div class="row" ng-controller="PasswordController"><br/>
     <div class="row">
       <h3 class="col-md-12 text-center">Restore your password</h3>
 
       <p class="small text-center">Enter your account username.</p>
 
-      <div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+      <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
         <form name="forgotPasswordForm" ng-submit="askForPasswordReset(forgotPasswordForm.$valid)" class="form-horizontal" novalidate autocomplete="off">
           <fieldset>
             <div class="form-group" show-errors>
@@ -29,5 +27,4 @@
         </form>
       </div>
     </div>
-  </div>
 </div>
