--- a/modules/users/client/views/password/reset-password.client.view.html
+++ b/modules/users/client/views/password/reset-password.client.view.html
@@ -1,10 +1,10 @@
-<section class="row" ng-controller="PasswordController">
+<section class="row" ng-controller="PasswordController"><br/>
   <h3 class="col-md-12 text-center">Reset your password</h3>
+  <p class="small text-center">Enter your new password.</p>
   <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
     <form name="resetPasswordForm" ng-submit="resetUserPassword(resetPasswordForm.$valid)" class="signin form-horizontal" novalidate autocomplete="off">
       <fieldset>
         <div class="form-group" show-errors>
-          <label for="newPassword">New Password</label>
           <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="passwordDetails.newPassword" placeholder="New Password" autocomplete="new-password" popover="{{popoverMsg}}" popover-trigger="focus" popover-placement="top" password-validator required>
           <div ng-messages="resetPasswordForm.newPassword.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Enter a new password.</p>
@@ -14,7 +14,6 @@
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="verifyPassword">Verify Password</label>
           <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="passwordDetails.verifyPassword" placeholder="Verify Password" password-verify="passwordDetails.newPassword" required>
           <div ng-messages="resetPasswordForm.verifyPassword.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Enter the password again to verify.</p>
