--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -1,22 +1,23 @@
 <div ng-controller="ChangeProfilePictureController">
-    <form class="signin form-horizontal">
+    <form class="">
       <fieldset>
-        <div class="form-group text-center">
+        <label>Change Picture</label>
+        <div class="form-group">
           <img ng-src="{{imageURL}}" alt="{{user.displayName}}" class="img-thumbnail user-profile-picture">
         </div>
-        <div class="text-center form-group" ng-hide="uploader.queue.length">
+        <div class="form-group" ng-hide="uploader.queue.length">
           <span class="btn btn-default btn-file">
               Select Image <input type="file" nv-file-select uploader="uploader">
           </span>
         </div>
-        <div class="text-center form-group" ng-show="uploader.queue.length">
+        <div class="form-group" ng-show="uploader.queue.length">
           <button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
           <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
         </div>
-        <div ng-show="success" class="text-center text-success">
+        <div ng-show="success" class="text-success">
           <strong>Profile Picture Changed Successfully</strong>
         </div>
-        <div ng-show="error" class="text-center text-danger">
+        <div ng-show="error" class="text-danger">
           <strong ng-bind="error"></strong>
         </div>
       </fieldset>
