--- a/modules/users/client/views/settings/settings.client.view.html
+++ b/modules/users/client/views/settings/settings.client.view.html
@@ -1,18 +1,15 @@
 <div class="row wrapper border-bottom white-bg page-heading">
   <div class="col-lg-10">
-    <h2>Settings</h2>
+    <h2>Profile Settings</h2>
     <ol class="breadcrumb">
-      <li>
-        <a href="/">Home</a>
-      </li>
-
     </ol>
   </div>
 </div>
 <div class="wrapper wrapper-content" ng-controller="SettingsController">
 
-  <div class="row">
-
+  <div class="row col-lg-4">
+    <div ui-view></div>
+    <!--
     <div class="col-md-4">
       <div class="ibox">
         <div class="ibox-content">
@@ -32,7 +29,7 @@
         </div>
       </div>
 
-    </div>
+    </div>-->
 
   </div>
 
