--- a/modules/core/client/views/navigation.client.view.html
+++ b/modules/core/client/views/navigation.client.view.html
@@ -21,32 +21,32 @@
       <li ng-class="{active: $uiRoute}" ui-route="/" >
         <a href="/#!/"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Business</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Business" >
+        <a href="/category/Business"><i class="fa fa-money"></i> <span class="nav-label">Business</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-child"></i> <span class="nav-label">Children's</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Children" >
+        <a href="/category/Children"><i class="fa fa-child"></i> <span class="nav-label">Children's</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-book"></i> <span class="nav-label">Fiction</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Fiction" >
+        <a href="/category/Fiction"><i class="fa fa-book"></i> <span class="nav-label">Fiction</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-bank"></i> <span class="nav-label">History</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/History" >
+        <a href="/category/History"><i class="fa fa-bank"></i> <span class="nav-label">History</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-pagelines"></i> <span class="nav-label">Hobbies</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Hobbies" >
+        <a href="/category/Hobbies"><i class="fa fa-pagelines"></i> <span class="nav-label">Hobbies</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-flask"></i> <span class="nav-label">Science</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Science" >
+        <a href="/category/Science"><i class="fa fa-flask"></i> <span class="nav-label">Science</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-group"></i> <span class="nav-label">Social Science</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Social" >
+        <a href="/category/Social"><i class="fa fa-group"></i> <span class="nav-label">Social Science</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-futbol-o"></i> <span class="nav-label">Sports</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Sport" >
+        <a href="/category/Sport"><i class="fa fa-futbol-o"></i> <span class="nav-label">Sports</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="" >
-        <a href="#"><i class="fa fa-bus"></i> <span class="nav-label">Travel</span></a>
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Travel" >
+        <a href="/category/Travel"><i class="fa fa-bus"></i> <span class="nav-label">Travel</span></a>
       </li>
 	    <li ng-class="{active: $uiRoute}" ui-route="/chat" >
         <a href="/chat"><i class="fa fa-comments"></i> <span class="nav-label">Chat</span></a>
