--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -50,6 +50,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-group" show-errors>
+                        <input type="password" id="verifyPassword" name="verifyPassword" class="form-control" ng-model="credentials.verifyPassword" placeholder="Verify Password" password-verify="credentials.password" required>
+
+                        <div ng-messages="userForm.verifyPassword.$error" role="alert">
+                            <p class="help-block error-text" ng-message="required">Enter the password again to verify.</p>
+                            <p class="help-block error-text" ng-show=userForm.verifyPassword.$error.passwordVerify>Passwords do not match.</p>
+                        </div>
+                    </div>
                     <!--<div class="form-group" ng-show="!userForm.password.$error.required">
                         <label>Password Requirements</label>
                         <progressbar value="requirementsProgress" type="{{requirementsColor}}"><span style="color:white; white-space:nowrap;">{{requirementsProgress}}%</span></progressbar>
@@ -61,7 +69,7 @@
                     </div>
                     <div ng-show="error" class="text-center text-danger">
                         <strong ng-bind="error"></strong>
-                    </div>
+                    </div>                    
                 </fieldset>
             </form>
         </div>
