--- a/modules/core/client/views/navigation.client.view.html
+++ b/modules/core/client/views/navigation.client.view.html
@@ -7,10 +7,10 @@
           <!--<img alt="image" class="img-circle" src="img/profile_small.jpg"/>-->
           <a href>
             <span class="clear">
-                <span class="block m-t-xs">
-                    <h2><i class="fa fa-book"></i><strong class="font-bold"> Bookstore:)</strong></h2>
-             </span>
-                <span class="text-muted text-xs block">MEAN Stack <i>Online Shop</i></span>
+              <span class="block m-t-xs">
+                <h2><i class="fa fa-book"></i><strong class="font-bold"> Bookstore:)</strong></h2>
+              </span>
+              <span class="text-muted text-xs block">MEAN Stack <i>Online Shop</i></span>
             </span>
           </a>
         </div>
@@ -21,7 +21,7 @@
       <li ng-class="{active: $uiRoute}" ui-route="/" >
         <a href="/#!/"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="/category/Business" >
+      <!--<li ng-class="{active: $uiRoute}" ui-route="/category/Business" >
         <a href="/category/Business"><i class="fa fa-money"></i> <span class="nav-label">Business</span></a>
       </li>
       <li ng-class="{active: $uiRoute}" ui-route="/category/Children" >
@@ -47,20 +47,18 @@
       </li>
       <li ng-class="{active: $uiRoute}" ui-route="/category/Travel" >
         <a href="/category/Travel"><i class="fa fa-bus"></i> <span class="nav-label">Travel</span></a>
-      </li>
-	    <li ng-class="{active: $uiRoute}" ui-route="/chat" >
-        <a href="/chat"><i class="fa fa-comments"></i> <span class="nav-label">Chat</span></a>
-      </li>
+      </li>-->
 
-      <!--<li ng-repeat="item in menu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
-        <a ng-switch-when="dropdown" class="dropdown-toggle" dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
-        <ul ng-switch-when="dropdown" class="dropdown-menu nav nav-second-level">
+      <li ng-repeat="item in menu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
+        <a ng-switch-when="dropdown" class="dropdown-toggle" dropdown-toggle role="button">
+          <i class="fa {{item.icon}}"></i><span class="nav-label">{{::item.title}}&nbsp;</span><span class="caret"></span></a>
+        <ul ng-switch-when="dropdown" class="nav nav-second-level collapse">
           <li ng-repeat="subitem in item.items | orderBy: 'position'" ng-if="subitem.shouldRender(authentication.user);" ui-sref-active="active">
             <a ui-sref="{{subitem.state}}" ng-bind="subitem.title"></a>
           </li>
         </ul>
-        <a ng-switch-default ui-sref="{{item.state}}" ng-bind="item.title"></a>
-    </li>-->
+        <a ng-switch-default ui-sref="{{item.state}}"><i class="fa {{item.icon}}"></i><span class="nav-label">{{::item.title}}</span></a>
+      </li>
     </ul>
   </div>
 </nav>
