--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -1,25 +1,34 @@
 <div ng-controller="ChangeProfilePictureController">
-    <form class="">
-      <fieldset>
-        <label>Change Picture</label>
-        <div class="form-group">
-          <img ng-src="{{imageURL}}" alt="{{user.displayName}}" class="img-thumbnail user-profile-picture">
-        </div>
-        <div class="form-group" ng-hide="uploader.queue.length">
-          <span class="btn btn-default btn-file">
+  <div class="row wrapper border-bottom white-bg page-heading">
+    <div class="col-lg-10">
+      <h2>Profile Picture</h2>
+    </div>
+  </div>
+  <div class="wrapper wrapper-content">
+    <div class="row col-lg-4">
+      <form class="">
+        <fieldset>
+          <label>Change Picture</label>
+          <div class="form-group">
+            <img ng-src="{{imageURL}}" alt="{{user.displayName}}" class="img-thumbnail user-profile-picture">
+          </div>
+          <div class="form-group" ng-hide="uploader.queue.length">
+            <span class="btn btn-default btn-file">
               Select Image <input type="file" nv-file-select uploader="uploader">
-          </span>
-        </div>
-        <div class="form-group" ng-show="uploader.queue.length">
-          <button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
-          <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
-        </div>
-        <div ng-show="success" class="text-success">
-          <strong>Profile Picture Changed Successfully</strong>
-        </div>
-        <div ng-show="error" class="text-danger">
-          <strong ng-bind="error"></strong>
-        </div>
-      </fieldset>
-    </form>
+            </span>
+          </div>
+          <div class="form-group" ng-show="uploader.queue.length">
+            <button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
+            <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
+          </div>
+          <div ng-show="success" class="text-success">
+            <strong>Profile Picture Changed Successfully</strong>
+          </div>
+          <div ng-show="error" class="text-danger">
+            <strong ng-bind="error"></strong>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </div>
 </div>
