--- a/modules/core/client/views/navigation.client.view.html
+++ b/modules/core/client/views/navigation.client.view.html
@@ -4,7 +4,7 @@
       <li class="nav-header">
         <div class="profile-element">
           <!-- Picture of user -->
-          <!--<img alt="image" class="img-circle" src="img/profile_small.jpg"/>-->
+          <!--<img alt="image" class="img-circle" src="modules/core/client/img/logo.png" />-->
           <a href>
             <span class="clear">
               <span class="block m-t-xs">
