--- a/modules/products/client/views/form-product.client.view.html
+++ b/modules/products/client/views/form-product.client.view.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row wrapper wrapper-content">
-    <form name="vm.form.productForm" ng-submit="vm.save(vm.form.productForm.$valid)" novalidate>
+    <form name="vm.form.productForm" novalidate>
       <div class="col-lg-4">
         <fieldset>
           <div class="form-group" show-errors>
@@ -46,8 +46,27 @@
               <p class="help-block error-text" ng-message="number">Stock must be number.</p>
             </div>
           </div>
+          <label>Upload Picture</label>
           <div class="form-group">
-            <button type="submit" class="btn btn-default">{{vm.product._id ? 'Update' : 'Create'}}</button>
+            <img ng-src="{{vm.product.imageUrl}}" alt="{{product.title}}" class="img-thumbnail user-profile-picture">
+          </div>
+          <div class="form-group" ng-hide="uploader.queue.length">
+            <span class="btn btn-default btn-file">
+              Select Image <input type="file" nv-file-select uploader="uploader">
+            </span>
+          </div>
+          <div class="form-group" ng-show="uploader.queue.length">
+            <button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
+            <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
+          </div>
+          <div ng-show="success" class="text-success">
+            <strong>Picture Changed Successfully</strong>
+          </div>
+          <div ng-show="error" class="text-danger">
+            <strong ng-bind="error"></strong>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-default" ng-click="vm.save(vm.form.productForm.$valid)">{{vm.product._id ? 'Update' : 'Create'}}</button>            
           </div>
           <div ng-show="vm.error" class="text-danger">
             <strong ng-bind="vm.error"></strong>
