--- a/modules/products/client/views/list-products.client.view.html
+++ b/modules/products/client/views/list-products.client.view.html
@@ -12,7 +12,7 @@
     <div class="ibox">
       <div class="ibox-content product-box">
         <div class="product-imitation">
-          [ INFO ]
+          <img ng-src="{{product.imageUrl}}" alt="{{product.title}}"  class="user-profile-picture">
         </div>
         <div class="product-desc">
           <span class="product-price">
