--- a/modules/products/client/views/list-products.client.view.html
+++ b/modules/products/client/views/list-products.client.view.html
@@ -1,13 +1,13 @@
 <section>
   <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-      <h2>{{category}} Books:</h2>
+      <h2>Books:</h2>
     </div>
     <div class="col-lg-2">
     </div>
   </div>
   <div class="row wrapper wrapper-content animated fadeInRight">
-    <div class="col-md-3"  data-ng-repeat="product in vm.products |  pagination: (vm.curPage - 1) * vm.pageSize | limitTo: vm.pageSize"
+    <div class="col-md-3"  data-ng-repeat="product in vm.products | filter:vm.searchText | pagination: (vm.curPage - 1) * vm.pageSize | limitTo: vm.pageSize"
       data-ui-sref="products.view({ productId: product._id })">
     <div class="ibox">
       <div class="ibox-content product-box">
