--- a/modules/core/client/css/style.css
+++ b/modules/core/client/css/style.css
@@ -3756,6 +3756,7 @@ code {
     border-image: none;
     border-style: solid solid none;
     border-width: 1px 0;
+    height: 320px;
 }
 .ibox-footer {
     color: inherit;
