--- a/modules/core/client/views/navigation.client.view.html
+++ b/modules/core/client/views/navigation.client.view.html
@@ -21,21 +21,21 @@
       <li ng-class="{active: $uiRoute}" ui-route="/" >
         <a href="/#!/"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
       </li>
-      <!--<li ng-class="{active: $uiRoute}" ui-route="/category/Business" >
+      <li ng-class="{active: $uiRoute}" ui-route="/category/Business" >
         <a href="/category/Business"><i class="fa fa-money"></i> <span class="nav-label">Business</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="/category/Children" >
+      <!--<li ng-class="{active: $uiRoute}" ui-route="/category/Children" >
         <a href="/category/Children"><i class="fa fa-child"></i> <span class="nav-label">Children's</span></a>
-      </li>
+      </li>-->
       <li ng-class="{active: $uiRoute}" ui-route="/category/Fiction" >
         <a href="/category/Fiction"><i class="fa fa-book"></i> <span class="nav-label">Fiction</span></a>
       </li>
-      <li ng-class="{active: $uiRoute}" ui-route="/category/History" >
+      <!--<li ng-class="{active: $uiRoute}" ui-route="/category/History" >
         <a href="/category/History"><i class="fa fa-bank"></i> <span class="nav-label">History</span></a>
       </li>
       <li ng-class="{active: $uiRoute}" ui-route="/category/Hobbies" >
         <a href="/category/Hobbies"><i class="fa fa-pagelines"></i> <span class="nav-label">Hobbies</span></a>
-      </li>
+      </li>-->
       <li ng-class="{active: $uiRoute}" ui-route="/category/Science" >
         <a href="/category/Science"><i class="fa fa-flask"></i> <span class="nav-label">Science</span></a>
       </li>
@@ -47,7 +47,7 @@
       </li>
       <li ng-class="{active: $uiRoute}" ui-route="/category/Travel" >
         <a href="/category/Travel"><i class="fa fa-bus"></i> <span class="nav-label">Travel</span></a>
-      </li>-->
+      </li>
 
       <li ng-repeat="item in menu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-switch="item.type" ng-class="{ active: $state.includes(item.state), dropdown: item.type === 'dropdown' }" class="{{item.class}}" dropdown="item.type === 'dropdown'">
         <a ng-switch-when="dropdown" class="dropdown-toggle" dropdown-toggle role="button">
