--- a/modules/products/client/views/view-product.client.view.html
+++ b/modules/products/client/views/view-product.client.view.html
@@ -1,4 +1,5 @@
 <section>
+  <div class="row wrapper">
   <div class="page-header">
     <h1 data-ng-bind="vm.product.title"></h1>
     <small>by <b>{{vm.product.author}}</b></small>
@@ -13,12 +14,27 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
+  <table>
+    <tr>
+      <td>
+  <iframe frameborder="0" scrolling="no" style="border:0px" width=450 height=600 ng-src="{{vm.urlPreview}}">Something wrong</iframe>
+</td>
+<td valign="top">
+  <div class="wrapper-content">
+    <h1>$ <b>{{vm.product.price}}</b></h1><br/>
+    Description:
+    <p>{{vm.product.description}}</p>
+    Stock: {{vm.product.stock}} items<br/>
   <small>
     <em class="text-muted">
       Posted on
       <span data-ng-bind="vm.product.created | date:'mediumDate'"></span>
     </em>
   </small>
-  <!--<iframe frameborder="0" scrolling="no" style="border:0px" src="https://books.google.co.id/books?id=Ao7g49o9wmcC&lpg=PP1&dq=fiction&pg=PP1&output=embed" width=500 height=500></iframe>-->
-  <p class="lead" data-ng-bind="vm.product.content"></p>
+  <br/>
+</div>
+</td>
+</tr>
+</table>
+</div>
 </section>
