--- a/modules/products/client/views/list-products.client.view.html
+++ b/modules/products/client/views/list-products.client.view.html
@@ -6,9 +6,22 @@
     <div class="col-lg-2">
     </div>
   </div>
+  <br/>
+  <div class="pull-right">Sort by: 
+    <select name="orderSelection" id="orderSelection" ng-model="vm.orderSelect">
+      <option value="-created" selected="selected">Last Update</option>
+      <option value="-stock">Stock</option>
+      <option value="price">Lowest Price</option>
+      <option value="title">Title</option>
+      <option value="author">Author</option>
+    </select><br>
+  </div>
+  <br/>
   <div class="wrapper wrapper-content animated fadeInRight">
+
     <div class="row">
-    <div class="col-md-3"  data-ng-repeat="product in vm.filteredProducts | pagination: (vm.curPage - 1) * vm.pageSize | limitTo: vm.pageSize"
+
+    <div class="col-md-3"  data-ng-repeat="product in vm.filteredProducts | pagination: (vm.curPage - 1) * vm.pageSize | limitTo: vm.pageSize | orderBy: vm.orderSelect"
       data-ui-sref="products.view({ productId: product._id })">
     <div class="ibox">
       <div class="ibox-content product-box">
