--- a/modules/core/client/views/navigation.client.view.html
+++ b/modules/core/client/views/navigation.client.view.html
@@ -59,7 +59,7 @@
         <a ng-switch-default ui-sref="{{item.state}}"><i class="fa {{item.icon}}"></i><span class="nav-label">{{::item.title}}</span></a>
       </li>
       <li ng-repeat="cat in categories" ng-class="{active: $uiRoute}" ui-route="/category/{{cat._id}}" >
-        <a href="/products?category={{cat._id}}"><i class="fa fa-book"></i> <span class="nav-label">{{cat._id}} ({{cat.count}})</span></a>
+        <a href="/products?category={{cat._id.replace('&','%26')}}"><i class="fa fa-book"></i> <span class="nav-label">{{cat._id}} ({{cat.count}})</span></a>
       </li>
       <li ng-class="{active: $uiRoute}" ui-route="/chat" >
         <a href="/chat"><i class="fa fa-comments"></i> <span class="nav-label">Group Chat</span></a>
