--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -5,9 +5,8 @@
                 <h2 class="logo-name">Bs:)</h2>
             </div>
             <h3>Welcome to <i class="fa fa-book"></i><b> Bookstore:)</b></h3>
-            <p>This application is developed with Javascript Fullstack Technology. Do you know what I MEAN?
+            <p>Please login with your username or <button class="btn btn-danger btn-outline" type="button" ng-click="callOauthProvider('/api/auth/google')"><i class="fa fa-google"></i>oogle+</button>
             </p>
-            <p>Login in. To see it in action.</p>
             <form name="userForm" ng-submit="signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
                 <fieldset>
                     <div class="form-group" show-errors>
