--- a/modules/products/client/views/form-product.client.view.html
+++ b/modules/products/client/views/form-product.client.view.html
@@ -16,6 +16,14 @@
             </div>
           </div>
           <div class="form-group" show-errors>
+            <label class="control-label" for="author">ISBN</label>
+            <input name="isbn" type="text" ng-model="vm.product.isbn" id="isbn" class="form-control" placeholder="ISBN" required minlength="10" maxlength="13">
+            <div ng-messages="vm.form.productForm.isbn.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">ISBN is required.</p>
+              <p class="help-block error-text" ng-message="minlength">ISBN min 10 characters.</p>
+            </div>
+          </div>
+          <div class="form-group" show-errors>
             <label class="control-label" for="author">Author</label>
             <input name="author" type="text" ng-model="vm.product.author" id="author" class="form-control" placeholder="Author" required>
             <div ng-messages="vm.form.productForm.author.$error" role="alert">
@@ -32,20 +40,47 @@
 
           <div class="form-group" show-errors>
             <label class="control-label" for="name">Price</label>
-            <input name="price" type="number" ng-model="vm.product.price" id="price" class="form-control" placeholder="Price" min="0" required>
+            <input name="price" type="number" ng-model="vm.product.price" id="price" class="form-control" placeholder="Price" min="0" required pattern="^[0-9]+(\.[0-9]{1,2})?$">
             <div ng-messages="vm.form.productForm.price.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Price is required.</p>
               <p class="help-block error-text" ng-message="number">Price must be number.</p>
-              <p class="help-block error-text" ng-message="min">Price must be positive./p>
+              <p class="help-block error-text" ng-message="min">Price must be positive.</p>
+              <p class="help-block error-text" ng-message="pattern">Maximum 2 decimal.</p>  
+              </div>
             </div>
-          </div>
+            <div class="form-group" show-errors>
+              <label class="control-label" for="stock">Stock</label>
+              <input name="stock" type="number" ng-model="vm.product.stock" id="name" class="form-control" placeholder="Stock" min="0" required>
+              <div ng-messages="vm.form.productForm.stock.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Stock is required.</p>
+                <p class="help-block error-text" ng-message="number">Stock must be number.</p>
+                <p class="help-block error-text" ng-message="min">Stock must be positive.</p>
+              </div>
+            </div>
+            <div class="form-group" show-errors>
+              <label class="control-label" for="stock">Status</label>
+              <select class="form-control" name="status" id="status" ng-model="vm.product.status" required>
+                <option value="A" selected="selected">Active</option>
+                <option value="I">Inactive</option>
+              </select>
+              <div ng-messages="vm.form.productForm.stock.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Status is required.</p>
+              </div><br>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-warning" ng-click="vm.save(vm.form.productForm.$valid)">{{vm.product._id ? 'Update' : 'Create'}}</button>
+            </div>
+            <div ng-show="vm.error" class="text-danger">
+              <strong ng-bind="vm.error"></strong>
+            </div>
+          </fieldset>
+        </div>
+        <div class="col-lg-8">
           <div class="form-group" show-errors>
-            <label class="control-label" for="stock">Stock</label>
-            <input name="stock" type="number" ng-model="vm.product.stock" id="name" class="form-control" placeholder="Stock" min="0" required>
-            <div ng-messages="vm.form.productForm.stock.$error" role="alert">
-              <p class="help-block error-text" ng-message="required">Stock is required.</p>
-              <p class="help-block error-text" ng-message="number">Stock must be number.</p>
-              <p class="help-block error-text" ng-message="min">Stock must be positive.</p>
+            <label class="control-label" for="name">Description</label>
+            <textarea name="description" type="text" ng-model="vm.product.description" id="description" class="form-control" placeholder="Description" rows="11"/>
+            <div ng-messages="vm.form.productForm.description.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Description is required.</p>
             </div>
           </div>
           <label>Upload Picture</label>
@@ -67,24 +102,8 @@
           <div ng-show="error" class="text-danger">
             <strong ng-bind="error"></strong>
           </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-default" ng-click="vm.save(vm.form.productForm.$valid)">{{vm.product._id ? 'Update' : 'Create'}}</button>
-          </div>
-          <div ng-show="vm.error" class="text-danger">
-            <strong ng-bind="vm.error"></strong>
-          </div>
-        </fieldset>
-      </div>
-      <div class="col-lg-8">
-        <div class="form-group" show-errors>
-          <label class="control-label" for="name">Description</label>
-          <textarea name="description" type="text" ng-model="vm.product.description" id="description" class="form-control" placeholder="Description" rows="15"/>
-          <div ng-messages="vm.form.productForm.description.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Description is required.</p>
-          </div>
         </div>
       </div>
-    </div>
-  </form>
-</div>
+    </form>
+  </div>
 </section>
